--- a/index.css
+++ b/index.css
@@ -1,51 +1,64 @@
 html, body {
   margin: 0;
   font-family: 'Lato', sans-serif;
-  background: linear-gradient(rgba(20,0,255,0), rgba(20, 0, 255, 0), rgb(132, 191, 227, .5));
+  /*background: linear-gradient(#fff, #fff, rgba(141,211,218, .5));*/
 }
 
 h1{
     text-align:center;
-    color: rgb(114, 166, 197);
+    color: #1A17C0;
 }
 
 h3{
-    color: rgb(114, 166, 197);
+    color: #BBD37D;
 }
 
 button{
-    padding:10px;
-    font-size: 14px;
-    background-color: #FFB97A;
+    padding:14px;
+    font-size: 18px;
+    background-color: #F4D270;
     color:white;
 }
 
 button:hover{
-    background-color: #FFCEA3;
+    background-color: #f2dc9d;
 }
 
 
 .sidebar{
-    width:16vw;
+    width:10vw;
     float:left;
     padding-left:2vw;
     padding-right:2vw;
 }
 
+.divider{
+    height:10px;
+    width:100%;
+    background-color: #BBD37D;
+    float:right;
+}
+
 .letter{
     /*only relevant on guide and about pages*/
-    padding-left:20vw;
-    padding-right:20vw;
+    padding-left:12vw;
+    padding-right:12vw;
+}
+
+.letterColumn{
+    width:34vw;
+    float:left;
+    padding-left:2vw;
+    padding-right:2vw;
 }
 
 .content{
-    margin-bottom: 60px;
     width:100vw;
     float:left;
 }
 
 iframe{
-    height:60vh;
+    height:70vh;
 }
 
 #disclaimer{
@@ -54,28 +67,27 @@ iframe{
 }
 
 #middleSection{
-    margin-left:18vw;
-    margin-right: 18vw;
-    width:60vw;
-    overflow:hidden;
+    margin-left:12vw;
+    margin-right: 12vw;
+    width:76vw;
     float:left;
 }
 
 
 #navbar {
   overflow: hidden;
-  background-color: rgb(132, 191, 227);
-  position: fixed; /* Set the navbar to fixed position */
-  bottom: 0; /* Position the navbar at the bottom of the page */
+  background-color: #BBD37D;
+  position: fixed; 
+  top: 0; 
   width: 100%; 
 }
 
 
-/*style the links in the navbar*/
+
 #navbar a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   font-size: 17px;
@@ -88,16 +100,18 @@ iframe{
 
 
 /*currently this never happens, because we aren't adding the active class to links in the navbar.  could do this but might be hard since it's a one page thing so it's hard to figure out which link is active*/
+
+/*
 #navbar a.active {
   color: white;
 }
-
+*/
 
 a{
-    color:#FFB97A;
+    color:#F4D270;
     text-decoration: none;
 }
 
 a:hover{
-    color:#FFCEA3;
+    color:#f2dc9d;
 }
